--- a/code/CSS/style_index.css
+++ b/code/CSS/style_index.css
@@ -81,8 +81,8 @@ summary h3 {
 
 .main-navigation li {
     list-style-type: none;
-    border: solid 2px var(--my-border-color);
-    border-radius: 6px;
+    border: solid 0.15rem var(--my-border-color);
+    border-radius: 1rem;
     padding: 0.75rem;    
     text-align: center;
     justify-content: center;
@@ -104,8 +104,9 @@ summary h3 {
     transform:  scale(1.2);
 }
 
-
-
+a.growing-text:hover {
+    color:blue !important;
+}
 
 
 
@@ -127,18 +128,11 @@ summary h3 {
 
 
 /*About section*/
-.man_avatar {
-    width: 250px;
-    max-width: 40vw;
-    height: auto;
-    object-fit: cover;
-    border-radius: 7px;
-}
-
 .my-image {
     float: left;
-    width: 15rem;
-    max-width: 25rem;
+    min-width: 20%;
+    width: 25%;
+    max-width: 35%;
     height: auto;
     object-fit: cover;
     border-radius: 3rem;
